Bug 665995 - Memory reporter for cycle collector.  r=bent