xpcom/base/nsCycleCollector.cpp
@@ -150,6 +150,7 @@
 #include "nsICycleCollectorListener.h"
 #include "nsIXPConnect.h"
 #include "nsIJSRuntimeService.h"
+#include "nsIMemoryReporter.h"
 #include "xpcpublic.h"
 #include <stdio.h>
 #include <string.h>
@@ -320,6 +321,7 @@ public:
     {
         mSentinelAndBlocks[0].block = nsnull;
         mSentinelAndBlocks[1].block = nsnull;
+        mNumBlocks = 0;
     }
 
     ~EdgePool()
@@ -335,6 +337,9 @@ public:
         while (b) {
             Block *next = b->Next();
             delete b;
+            NS_ASSERTION(mNumBlocks > 0,
+                         "Expected EdgePool mNumBlocks to be positive.");
+            mNumBlocks--;
             b = next;
         }
 
@@ -369,6 +374,7 @@ private:
     // Store the null sentinel so that we can have valid iterators
     // before adding any edges and without adding any blocks.
     PtrInfoOrBlock mSentinelAndBlocks[2];
+    PRUint32 mNumBlocks;
 
     Block*& Blocks() { return mSentinelAndBlocks[1].block; }
 
@@ -414,7 +420,8 @@ public:
         Builder(EdgePool &aPool)
             : mCurrent(&aPool.mSentinelAndBlocks[0]),
               mBlockEnd(&aPool.mSentinelAndBlocks[0]),
-              mNextBlockPtr(&aPool.Blocks())
+              mNextBlockPtr(&aPool.Blocks()),
+              mNumBlocks(aPool.mNumBlocks)
         {
         }
 
@@ -432,6 +439,7 @@ public:
                 mCurrent = b->Start();
                 mBlockEnd = b->End();
                 mNextBlockPtr = &b->Next();
+                mNumBlocks++;
             }
             (mCurrent++)->ptrInfo = aEdge;
         }
@@ -439,7 +447,12 @@ public:
         // mBlockEnd points to space for null sentinel
         PtrInfoOrBlock *mCurrent, *mBlockEnd;
         Block **mNextBlockPtr;
+        PRUint32 &mNumBlocks;
     };
+
+    size_t BlocksSize() const {
+        return sizeof(Block) * mNumBlocks;
+    }
 
 };
 
@@ -568,7 +581,8 @@ private:
 public:
     NodePool()
         : mBlocks(nsnull),
-          mLast(nsnull)
+          mLast(nsnull),
+          mNumBlocks(0)
     {
     }
 
@@ -591,6 +605,9 @@ public:
         while (b) {
             Block *n = b->mNext;
             NS_Free(b);
+            NS_ASSERTION(mNumBlocks > 0,
+                         "Expected NodePool mNumBlocks to be positive.");
+            mNumBlocks--;
             b = n;
         }
 
@@ -605,7 +622,8 @@ public:
         Builder(NodePool& aPool)
             : mNextBlock(&aPool.mBlocks),
               mNext(aPool.mLast),
-              mBlockEnd(nsnull)
+              mBlockEnd(nsnull),
+              mNumBlocks(aPool.mNumBlocks)
         {
             NS_ASSERTION(aPool.mBlocks == nsnull && aPool.mLast == nsnull,
                          "pool not empty");
@@ -623,6 +641,7 @@ public:
                 mBlockEnd = block->mEntries + BlockSize;
                 block->mNext = nsnull;
                 mNextBlock = &block->mNext;
+                mNumBlocks++;
             }
             return new (mNext++) PtrInfo(aPointer, aParticipant
                                          IF_DEBUG_CC_PARAM(aLangID)
@@ -632,6 +651,7 @@ public:
         Block **mNextBlock;
         PtrInfo *&mNext;
         PtrInfo *mBlockEnd;
+        PRUint32 &mNumBlocks;
     };
 
     class Enumerator;
@@ -675,9 +695,14 @@ public:
         PtrInfo *mNext, *mBlockEnd, *&mLast;
     };
 
+    size_t BlocksSize() const {
+        return sizeof(Block) * mNumBlocks;
+    }
+
 private:
     Block *mBlocks;
     PtrInfo *mLast;
+    PRUint32 mNumBlocks;
 };
 
 
@@ -696,6 +721,11 @@ struct GCGraph
     }
     ~GCGraph() { 
     }
+
+    size_t BlocksSize() const {
+        return mNodes.BlocksSize() + mEdges.BlocksSize();
+    }
+
 };
 
 // XXX Would be nice to have an nsHashSet<KeyType> API that has
@@ -719,6 +749,7 @@ public:
     // buffer.
 
     nsCycleCollectorParams &mParams;
+    PRUint32 mNumBlocksAlloced;
     PRUint32 mCount;
     Block mFirstBlock;
     nsPurpleBufferEntry *mFreeList;
@@ -756,6 +787,7 @@ public:
 
     void InitBlocks()
     {
+        mNumBlocksAlloced = 0;
         mCount = 0;
         mFreeList = nsnull;
         StartBlock(&mFirstBlock);
@@ -787,6 +819,9 @@ public:
             Block *next = b->mNext;
             delete b;
             b = next;
+            NS_ASSERTION(mNumBlocksAlloced > 0,
+                         "Expected positive mNumBlocksAlloced.");
+            mNumBlocksAlloced--;
         }
         mFirstBlock.mNext = nsnull;
     }
@@ -830,6 +865,7 @@ public:
             if (!b) {
                 return nsnull;
             }
+            mNumBlocksAlloced++;
             StartBlock(b);
 
             // Add the new block as the second block in the list.
@@ -893,6 +929,12 @@ public:
     {
         return mCount;
     }
+
+    size_t BlocksSize() const
+    {
+        return sizeof(Block) * mNumBlocksAlloced;
+    }
+
 };
 
 struct CallbackClosure
@@ -3278,6 +3320,36 @@ nsCycleCollector::WasFreed(nsISupports *n)
 }
 #endif
 
+
+////////////////////////
+// Memory reporter
+////////////////////////
+
+static PRInt64
+ReportCycleCollectorMem()
+{
+    if (!sCollector)
+        return 0;
+    PRInt64 size = sizeof(nsCycleCollector) + 
+        sCollector->mPurpleBuf.BlocksSize() +
+        sCollector->mGraph.BlocksSize();
+    if (sCollector->mWhiteNodes)
+        size += sCollector->mWhiteNodes->Capacity() * sizeof(PtrInfo*);
+    return size;
+}
+
+NS_MEMORY_REPORTER_IMPLEMENT(CycleCollector,
+                             "explicit/cycle-collector",
+                             KIND_HEAP,
+                             UNITS_BYTES,
+                             ReportCycleCollectorMem,
+                             "Memory used by the cycle collector.  This "
+                             "includes the cycle collector structure, the "
+                             "purple buffer, the graph, and the white nodes.  "
+                             "The latter two are expected to be empty when the "
+                             "cycle collector is idle.")
+
+
 ////////////////////////////////////////////////////////////////////////
 // Module public API (exported in nsCycleCollector.h)
 // Just functions that redirect into the singleton, once it's built.
@@ -3287,8 +3359,13 @@ void
 nsCycleCollector_registerRuntime(PRUint32 langID, 
                                  nsCycleCollectionLanguageRuntime *rt)
 {
+    static PRBool regMemReport = PR_TRUE;
     if (sCollector)
         sCollector->RegisterRuntime(langID, rt);
+    if (regMemReport) {
+        regMemReport = PR_FALSE;
+        NS_RegisterMemoryReporter(new NS_MEMORY_REPORTER_NAME(CycleCollector));
+    }
 }
 
 nsCycleCollectionLanguageRuntime *
